# torch-lab

./: .gitignore  README.md  TODO.md  bug_report_compile_log_2.py  create_submission.sh  pyproject.toml  requirements.txt  scrap.eda.py  scrap.trainvalsplit.py
configs/: mnist.py  mnist_example.py
data/: .gitignore  hms
data/processed/: train.csv.REMOVED.git-id  val.csv.REMOVED.git-id
data/processed/multiclass_one_hot/: train_0.csv.REMOVED.git-id  train_1.csv.REMOVED.git-id  train_2.csv.REMOVED.git-id  train_3.csv.REMOVED.git-id  train_4.csv.REMOVED.git-id  val_0.csv.REMOVED.git-id  val_1.csv.REMOVED.git-id  val_2.csv.REMOVED.git-id  val_3.csv.REMOVED.git-id  val_4.csv.REMOVED.git-id
data/processed/patient_split/: train_patient_ids.csv  val_patient_ids.csv
data/processed/prob_cross_val/: train_0.csv.REMOVED.git-id  train_1.csv.REMOVED.git-id  train_2.csv.REMOVED.git-id  train_3.csv.REMOVED.git-id  val_0.csv.REMOVED.git-id  val_1.csv.REMOVED.git-id  val_2.csv.REMOVED.git-id  val_3.csv.REMOVED.git-id  val_4.csv.REMOVED.git-id
docs/: notes.md
experiments/00_initial/: __init__.py  baseline.py
experiments/00_toy_classifier/: __init__.py  baseline.py
experiments/00_toy_example/: __init__.py
experiments/01_resnet1d18/: __init__.py
experiments/01_resnet1d34/: __init__.py  baseline.py  decrease_lr.py  update_loss.py
experiments/02_efficientnet_spectro/: __init__.py  baseline.py  baseline_high.py  baseline_low.py
experiments/02_wavenet/: baseline.py
experiments/03_multiclass_efficientnet_spectro/: __init__.py  baseline.py  crossval_0.py  crossval_1.py  crossval_2.py
experiments/04_kldiv_prob_crossval/: __init__.py  baseline.py  finetune.py  finetune_0.py  finetune_1.py  finetune_2.py  finetune_3.py  finetune_4.py
experiments/05_seizure_classification/: __init__.py  baseline.py  baseline_high.py
experiments/06_pdrda_classification/: __init__.py  baseline_high.py  baseline_low.py
experiments/07_kldiv_feature_cat/: __init__.py  baseline.py  baseline_high.py  baseline_low.py
experiments/08_efficientnet_spectro_resunet/: __init__.py  baseline.py  baseline_high.py  baseline_low.py
experiments/09_seizure_classification_small/: __init__.py  baseline.py  baseline_low.py
experiments/10_pdrda_classification_small/: __init__.py  baseline.py  baseline_high.py
experiments/11_kldiv_feature_cat_simple/: __init__.py  baseline.py
experiments/12_1d_resunet_kldiv/: __init__.py  baseline.py
experiments/archived/00_toy_classifier/: baseline.py
hms_brain_activity/: callbacks.py  dataset.py  datasets.py  globals.py  loggers.py  metadata_classes.py  metrics.py  module.py  paths.py  transforms.py  utils.py  vis.py
scrap/: new_ds.py  trainvalsplit.py  violin.py
src/core/: callbacks.py  datasets.py  modules.py  transforms.py  utils.py
src/example_project/: callbacks.py  datasets.py  transforms.py
src/hms_brain_activity/: __init__.py  callbacks.py  datasets.py  metrics.py  paths.py  transforms.py  vis.py
src/tasks/: create_submission.py  stop.py  train.py
src/torch_lab/: callbacks.py  datasets.py  loggers.py  metrics.py  modules.py  paths.py  transforms.py  typing.py  utils.py
tasks/: predict.py  stop.py  train.py
tests/: conftest.py  test_datasets.py  test_modules.py  test_transforms.py  test_utils.py
tests/tasks/: test_infer.py  test_train.py
torch_lab/: __init__.py  __main__.py  build.py  log.py  paths.py  test.py  train.py
torch_lab/core/: __init__.py  checkpoint.py  config.py  lab_data_module.py  lab_module.py  metric_logger.py  utils.py
(+32 files in other folders)
