[project]
name = "hms-brain-activity"
version = "0.2.0"
description = "An attempt at a Kaggle competition for seizure detection."
authors = [
    { name = "BlakeJC94", email = "blakejamescook@gmail.com" }
]
dependencies = [
    "pandas>=2.2.0",
    "torch<=1.12.1",
    "lightning<=2.1.4",
    "torchaudio<=0.12.1",
    "torchvision<=0.13.1",
    "mne>=1.6.1",
    "plotly>=5.19.0",
    "pyarrow>=15.0.0",
    "torchmetrics>=1.3.1",
    "matplotlib>=3.8.3",
    "tensorboard>=2.16.2",
    "scipy>=1.12.0",
    "scikit-learn>=1.4.1.post1",
    "pip>=24.0",
    "gitpython>=3.1.42",
]
readme = "README.md"
requires-python = ">= 3.10"

[project.scripts]
"train" = "tasks.train:main"
"multitrain" = "tasks.multitrain:main"
"predict" = "tasks.predict:main"
"stop" = "tasks.stop:main"
"create-submission" = "tasks.create_submission:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "ipython>=8.21.0",
    "black>=24.2.0",
    "pytest>=8.0.1",
    "dash>=2.16.1",
    "dash-bootstrap-components>=1.5.0",
    "clearml>=1.14.4",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/hms_brain_activity"]
