[project]
name = "torch-lab"
version = "0.3.0"
description = "Core components for experiments with Pytorch"
authors = [
    { name = "BlakeJC94", email = "blakejamescook@gmail.com" }
]
dependencies = [
    "torch>=1.12.1",
    "lightning>=2.1.4",
    "plotly>=5.19.0",
    "matplotlib>=3.8.3",
    "tensorboard>=2.16.2",
    "dash>=2.16.1",
    "dash-bootstrap-components>=1.5.0",
    "clearml>=1.14.4",
    "attrdict>=2.0.1",
]
readme = "README.md"
requires-python = ">= 3.10"

[project.scripts]
"train" = "tasks.train:main"
"multitrain" = "tasks.multitrain:main"
"predict" = "tasks.predict:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pip>=24.0",
    "ipython>=8.21.0",
    "black>=24.2.0",
    "pytest>=8.0.1",
    "mnist",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/core"]
