[project]
name = "torch-lab"
version = "1.7.8"
description = "Core components for experiments with Pytorch"
authors = [
    { name = "BlakeJC94", email = "blakejamescook@gmail.com" }
]
dependencies = [
    "torch>=1.12.1",
    "lightning>=2.1.4",
    "plotly>=5.19.0",
    "matplotlib>=3.8.3",
    "tensorboard>=2.16.2",
    "dash>=2.16.1",
    "dash-bootstrap-components>=1.5.0",
    "clearml>=1.14.4",
    "torchmetrics>=1.0.0",
]
readme = "README.md"
requires-python = ">= 3.10"

[project.scripts]
"train" = "torch_lab.tasks.train:main"
"multitrain" = "torch_lab.tasks.multitrain:main"
"infer" = "torch_lab.tasks.infer:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pip>=24.0",
    "ipython>=8.21.0",
    "black>=24.2.0",
    "pytest>=8.0.1",
    "mnist",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/torch_lab"]

[tool.isort]
known_first_party = ["torch_lab", "example_project"]
profile = "black"
line_length = 100

[tool.pytest.ini_options]
filterwarnings = [
    "ignore:::pytorch_lightning",
    "ignore:::tensorboard",
    "ignore::DeprecationWarning",
]
